deployed updated files for index page of portfolio file

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="developer" content="Omolola Odunowo">
     <meta name="name" content="Omolola Odunowo's Portfolio">
+    <meta name="theme-color" content="#8a2c98">
     <link rel="stylesheet" href="styles.css">
     <script src="https://use.fontawesome.com/81186c4520.js"></script>
+    <link rel="manifest" href="manifest.json">
     <title>Home Page Portfolio</title>
 </head>
 <body>
